k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: system-plane
  labels:
    platform.loonaris.tech/system: "true"
