k8s/service-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-gateway
  namespace: system-plane
  labels:
    app: db-gateway
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    app: db-gateway
